# OpenApi/openAPI.json
@@ -26,13 +26,7 @@
         "description": "Insert provider",
         "parameters": [
           {
-            "in": "header",
-            "name": "X-ACCOUNT-ID",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
+            "$ref" : "contentSchema/params/accountIDParam.json"
           }
         ],
         "requestBody": {
@@ -67,23 +61,10 @@
         "description" : "Add item",
         "parameters": [
           {
-            "in": "header",
-            "name": "X-ACCOUNT-ID",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
+            "$ref" : "contentSchema/params/accountIDParam.json"
           },
           {
-            "name": "provider-id",
-            "in": "path",
-            "description": "Id of provider to add item to",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int64"
-            }
+            "$ref" : "contentSchema/params/providerIDParam.json"
           }
         ],
         "requestBody": {
@@ -115,23 +96,10 @@
         "description": "Update provider",
         "parameters": [
           {
-            "in": "header",
-            "name": "X-ACCOUNT-ID",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
+            "$ref" : "contentSchema/params/accountIDParam.json"
           },
           {
-            "name": "provider-id",
-            "in": "path",
-            "description": "Id of provider to update",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int64"
-            }
+            "$ref" : "contentSchema/params/providerIDParam.json"
           }
         ],
         "requestBody": {
@@ -147,7 +115,7 @@
         },
         "responses": {
           "201": {
-            "$ref": "responses/201ProviderCreated.json"
+            "$ref": "responses/201ProviderUpdated.json"
           },
           "400": {
             "$ref": "responses/400BadRequest.json"
